Solution_files/resultserver-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: resultserver-deploy
  name: resultserver-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resultserver-deploy
  template:
    metadata:
      labels:
        app: resultserver-deploy
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - image: 381491962559.dkr.ecr.us-east-1.amazonaws.com/clarusway-repo/phonebook-app:result
        name: resultserver
        ports:
        - containerPort: 80
        resources: {}
