Solution_files/webserver-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webserver-deploy
  name: webserver-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webserver-deploy
  template:
    metadata:
      labels:
        app: webserver-deploy
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - image: 381491962559.dkr.ecr.us-east-1.amazonaws.com/clarusway-repo/phonebook-app:web
        name: webserver
        ports:
        - containerPort: 80
        resources: {}
